# aruco_tracker

./: .gitmodules  init_proj.sh  readme.md
catkin_ws/src/PerceptionProject/: 3map.pgm  3map.yaml  CMakeLists.txt  map.pgm  package.xml
catkin_ws/src/PerceptionProject/launch/: find_arucos.launch  map_gen.launch  nav_stack.launch  turtlebot3_world_with_camera.launch
catkin_ws/src/PerceptionProject/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
catkin_ws/src/PerceptionProject/rviz/: nav.rviz  turtlebot3.rviz
catkin_ws/src/PerceptionProject/src/: explore_then_dock.py
catkin_ws/src/PerceptionProject/urdf/: turtlebot3_with_camera.gazebo.xacro  turtlebot3_with_camera.urdf.xacro
catkin_ws/src/PerceptionProject/worlds/: aruco_world.world  three_aruco_world.world
robot_scripts/: README.md  computer_stream_pipeline.py  pi_receiver.py  pi_stream.py  pi_stream_w_proc.py
